# llm-merchant-finetune

./: .gitignore  README.md  pyproject.toml  requirements-ci.txt  requirements.txt
.github/workflows/: ci.yml
data/: meta.json  sample.jsonl
eval/: baseline.json  finetuned.json  results.md  robustness_report.md  run_robustness.py
merchant_llm/: __init__.py  baseline.py  categories.py  config.py  evaluate.py  inference.py  parsing.py  prompts.py  train.py
merchant_llm/data/: __init__.py  generate.py
merchant_llm/serve/: app.py
models/adapter/: adapter_config.json  loss_curve.csv  training_config.json
tests/: conftest.py  test_categories.py  test_config.py  test_generator.py  test_local_inference.py  test_parser.py  test_prompts.py  test_robustness.py
