[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "merchant-llm"
version = "0.1.0"
description = "LoRA fine-tuning of a small open LLM to normalize card-transaction merchant descriptors"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Abbas Ramazanov" }]

[tool.setuptools.packages.find]
include = ["merchant_llm*"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".venv", "models", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "local: needs the model weights on disk; skipped unless MERCHANT_LOCAL_TESTS=1",
]
